--- a/styles.css
+++ b/styles.css
@@ -6,9 +6,10 @@ body {
     font-size: 16px;
     font-family: 'Courier New', Courier, monospace;
     color: #fff;
-    background-color: rgba(54, 66, 48, 0.705);
+    background-color: black;
     padding: 0;
     margin: 0;
+    height: 100vh;
 }
 .nav-bar {
     display: flex;
@@ -43,4 +44,7 @@ header {
     display: flex;
     text-align: justify;
     margin-top: 50px;
+    text-align: left;
+    white-space: pre-line;
+    margin-top: 25%;
 }
